--- a/side-cafe-backend/package.json
+++ b/side-cafe-backend/package.json
@@ -10,6 +10,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.9.0"
+    "pg": "^8.9.0",
+    "qrcode": "^1.5.4",
+    "uuid": "^11.1.0"
   }
 }
